chore: fix manual issues

--- a/packages/docs/design-docs/ux-writing/glossary.mdx
+++ b/packages/docs/design-docs/ux-writing/glossary.mdx
@@ -146,7 +146,7 @@ click
 <dd>
 Since we don’t know if a user is on a desktop or mobile device, avoid using “click” when instructing the user on how to complete an action within the UI. Whenever possible, write around the issue with generic verbs like “choose,” “select” or “pick.”
 
-Avoid using “hit."
+Avoid using “hit.”
 
 </dd>
 
@@ -248,7 +248,7 @@ To avoid confusion, try not to use “customer” to refer to BigCommerce client
 
 <dt className="font-bold mt-4">ecommerce</dt>
 <dd>
-  Use “ecommerce” (or "Ecommerce" if at the start of a sentence). Never use “e-commerce” or
+  Use “ecommerce” (or “Ecommerce” if at the start of a sentence). Never use “e-commerce” or
   “eCommerce.”
 </dd>
 
@@ -370,7 +370,7 @@ Never use “log-in,” “sign in” or “sign-in.”
 <dt className="font-bold mt-4">Multi-Storefront</dt>
 <dd>
   Multi-Storefront should be capitalized when talking about the specific BigCommerce solution. If
-  speaking about the technology in general, then use lowercase "multi-storefront."
+  speaking about the technology in general, then use lowercase “multi-storefront.”
 </dd>
 
 <dt className="font-bold mt-4">multi-channel</dt>
